# autoipindia

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  config.py  main.py  pyproject.toml
.github/workflows/: deploy-frontend.yml
backend/: .env.example  Dockerfile  config.py  db.py  jobs.py  logger.py  main.py  models.py  rate_limiter.py  requirements.txt
backend/helpers/: captcha_solver.py  combinations.py
backend/logic/: __init__.py  csv_import.py  ingest.py  retrieve.py  search_application.py  trademark_search.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  nginx.conf  package-lock.json  package.json  requirements.txt  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AddTrademarkForm.tsx  CSVUploadForm.tsx  Dashboard.tsx  ExportButtons.tsx  HistoryModal.tsx  JobsPanel.tsx  Pagination.tsx  SearchFilters.tsx  StatsCards.tsx  TrademarkTable.tsx
frontend/src/contexts/: DarkModeContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: time.ts
helpers/: __init__.py  utils.py
logic/: __init__.py  ingest.py  retrieve.py  search_application.py  search_wordmark.py  trademark_search.py
react_fe/: Dockerfile  README.md  index.html
react_fe/src/components/: Dashboard.tsx  StatsCards.tsx  TrademarkTable.tsx
react_fe/src/hooks/: useTrademarks.ts
react_fe/src/services/: api.ts
react_fe/src/types/: index.ts
