[project]
name = "autoipindia"
version = "0.1.0"
description = "Automated Indian Trademark Status Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "google-genai>=1.26.0",
    "pandas>=2.3.1",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.28.0",
    "prefect>=3.0.0",
    "plotly>=5.15.0",
    "email-validator>=2.0.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.25",
    "duckdb-engine>=0.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Fix for the build error - explicitly specify packages
[tool.hatch.build.targets.wheel]
packages = [
    "helpers",
    "logic", 
]

# Include additional files
[tool.hatch.build.targets.wheel.sources]
"config.py" = "config.py"
"sample_captchas" = "sample_captchas"

[project.scripts]
autoipindia-ui = "streamlit_app.main:main"
autoipindia-flow = "flows.trademark_checker:trademark_status_flow"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to false to avoid mypy issues during development
